[package]
name = "speedtest-exporter"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
hyper = { version = "0.14.20", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.17"
prometheus = "0.13.2"
speedtest-rs = "0.1.2"
tokio = { version = "1.21.1", features = ["full"] }
