[package]
name = "speedtest-exporter"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
hyper = { version = "0.14.27", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.20"
prometheus = "0.13.3"
speedtest-rs = "0.1.2"
structopt = "0.3.26"
tokio = { version = "1.31.0", features = ["full"] }
