[package]
name = "speedtest-exporter"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
hyper = { version = "0.14.28", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.21"
prometheus = "0.13.4"
speedtest-rs = "0.1.2"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["full"] }
